--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,5 +1,5 @@
 baseURL: https://wwwng.onrender.com/
-title: Eureka Demo
+title: sakrum
 
 # Uncomment when not installing with Hugo Modules
 # theme: eureka
