--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,10 +1,10 @@
 main:
-  - name: About
-    url: '#about'
-    weight: 3
+#  - name: About
+#    url: '#about'
+#    weight: 3
   - name: Posts
     url: /posts/
     weight: 1
-  - name: Docs
-    url: /docs/
-    weight: 2
+#  - name: Docs
+#    url: /docs/
+#    weight: 2
