--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,5 +1,5 @@
-baseURL: https://wwwng.onrender.com/
-title: sakrum
+baseURL: https://www.scheuerer.info/
+title: Scheuerer
 
 # Uncomment when not installing with Hugo Modules
 # theme: eureka
