--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,8 @@ title: Scheuerer
 # Uncomment when not installing with Hugo Modules
 # theme: eureka
 # Comment when not installing with Hugo Modules
-theme: wangchucheng.com/hugo-eureka
+# theme: wangchucheng.com/hugo-eureka
+theme: github.com/adityatelange/hugo-PaperMod
 # If you cannot access the Github mirror, you can also use the Gitee mirror: gitee.com/wangchucheng/hugo-eureka
 
 #paginate: 10
